# valkyrie

./: CMakeLists.txt  Makefile  configure.ac
include/: .io.h.swp  channels.h  common.h  connection.h  datastream.h  global.h  match.h  mode.h  object.h  platform.h  pmodule.h  res.h  servers.h  sourceinfo.h  sysconf.h.in  tools.h  users.h  valkyrie.h
src/: Makefile  connection.c  datastream.c  function.c  logger.c  main.c  match.c  object.c  parse.c  pmodule.c  servers.c  sharedheap.c  sourceinfo.c  strshare.c  tokenize.c  users.c
